--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+@font-face {
+  font-family: "Shikaku-Font";
+  src: url("./font/roboto-condensed.regular.ttf") format("truetype");
+}
+
 .App {
   text-align: center;
+  font-family: "Shikaku-Font";
 }
 
 .App-logo {
@@ -14,14 +20,22 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+}
+
+.dark {
+  background-color: #282c34;
+  color: #e4e4e4;
+}
+
+.light {
+  background-color: #e4e4e4;
+  color: #282c34;
 }
 
 .App-link {
@@ -35,4 +49,330 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.newNavbar {
+  min-height: 5vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.darkModeSwitch {
+  background-color: inherit;
+  border: none;
+  color: inherit;
+}
+
+a { 
+  color: inherit; 
+  text-decoration: none;
+}
+
+a:visited {
+  color: inherit; 
+  text-decoration: none;
+}
+
+a:hover {
+  color: inherit; 
+  text-decoration: none;
+}
+
+a:active {
+  color: inherit; 
+  text-decoration: none;
+}
+
+.table-dark {
+  border-collapse:separate;
+  border:solid #e4e4e4 2px;
+  border-radius:6px;
+}
+
+.td-dark, .th-dark {
+  border-left:solid #e4e4e4 1px;
+  border-top:solid #e4e4e4 1px;
+  width: 7vh;
+  height: 7vh;
+}
+
+.th-dark {
+  border-top: none;
+}
+
+.td-dark:first-child, .th-dark:first-child {
+   border-left: none;
+}
+
+.table-light {
+  border-collapse:separate;
+  border:solid #282c34 2px;
+  border-radius:6px;
+}
+
+.td-light, .th-light {
+  border-left:solid #282c34 1px;
+  border-top:solid #282c34 1px;
+  width: 7vh;
+  height: 7vh;
+}
+
+.th-light {
+  border-top: none;
+}
+
+.td-light:first-child, .th-light:first-child {
+   border-left: none;
+}
+
+.input-group {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  width: 25vw;
+}
+
+.input-group-b {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+}
+
+.input-group-c {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.input-group>.form-control-d, .input-group>.form-control-l, .input-group>.form-select {
+  position: relative;
+  flex: 1 1 auto;
+  width: 1%;
+  min-width: 0;
+}
+
+.input-group-text-d {
+  display: flex;
+  align-items: center;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #e4e4e4;
+  border: 1px solid #e4e4e4;
+  border-radius: .25rem;
+  color: #282c34;
+}
+
+.form-control-d {
+  display: block;
+  width: 100%;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.5;
+  color: inherit;
+  background-color: inherit;
+  background-clip: padding-box;
+  border: 1px solid #e4e4e4;
+  -webkit-appearance: none;
+  appearance: none;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  text-align: center;
+}
+
+.form-control-d:focus {
+  outline: none;
+}
+
+.input-group-text-l {
+  display: flex;
+  align-items: center;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #282c34;
+  border: 1px solid #282c34;
+  border-radius: .25rem;
+  color: #e4e4e4;
+}
+
+.form-control-l {
+  display: block;
+  width: 100%;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.5;
+  color: inherit;
+  background-color: inherit;
+  background-clip: padding-box;
+  border: 1px solid #282c34;
+  -webkit-appearance: none;
+  appearance: none;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  text-align: center;
+}
+
+.form-control-l:focus {
+  outline: none;
+}
+
+.input-shikaku {
+  color: inherit;
+  background-color: inherit;
+  border: none;
+  width: 100%;
+  text-align: center;
+}
+
+.input-shikaku:focus {
+  outline: none;
+}
+
+input[type=number].input-shikaku::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.input-group-text-d:disabled {
+  display: flex;
+  align-items: center;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #282c34;
+  border-color: #e4e4e4;
+  /* border-radius: .25rem; */
+  color: #e4e4e4;
+}
+
+.brNoRadius {
+  border-radius: 0;
+}
+
+.input-group-text-l:disabled {
+  display: flex;
+  align-items: center;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #e4e4e4;
+  border-color: #282c34;
+  /* border-radius: .25rem; */
+  color: #282c34;
+}
+
+.ans0 {
+  background-color: purple;
+  color: #e4e4e4;
+}
+
+.ans1 {
+  background-color: darkblue;
+  color: #e4e4e4;
+}
+
+.ans2 {
+  background-color: cornflowerblue;
+  color: #1d1c1c;
+}
+
+.ans3 {
+  background-color: green;
+  color: #eee7e7;
+}
+.ans4 {
+  background-color: yellow;
+  color: #131111;
+}
+
+.ans5 {
+  background-color: orange;
+  color: #0f0f0f;
+}
+.ans6 {
+  background-color: red;
+  color: #000000;
+}
+
+.ans7 {
+  background-color: darkred;
+  color: #e4e4e4;
+}
+.ans8 {
+  background-color: darkorchid;
+  color: #000000;
+}
+
+.ans9 {
+  background-color: mediumseagreen;
+  color: #020202;
+}
+.ans10 {
+  background-color: darkolivegreen;
+  color: #e4e4e4;
+}
+
+.ans11 {
+  background-color: aquamarine;
+  color: #000000;
+}
+
+.ans12 {
+  background-color: gold;
+  color: #000000;
+}
+
+.ans13 {
+  background-color: silver;
+  color: #000000;
+}
+
+.ans14 {
+  background-color: burlywood;
+  color: #161616;
+}
+
+.ans15 {
+  background-color: crimson;
+  color: #cccccc;
+}
+
+.ans16 {
+  background-color: darkkhaki;
+  color: #000000;
+}
+
+.ans17 {
+  background-color: cyan;
+  color: #000000;
+}
+
+.ans18 {
+  background-color: darkslateblue;
+  color: #cccccc;
+}
+
+.ans19 {
+  background-color: limegreen;
+  color: #000000;
 }
